package bridge

type computer interface {
	print()
	setPrinter(printer)
}
