package bridge

type printer interface {
	printFile()
}
